# DoubleAgent

./: .gitignore  README.md  double_agent.py  pyproject.toml
agent/: models.py  prompt_generator.py  scaffolding.py  tools.py
files/: important_doc.txt
files/pdf_source/: LORA.bib  LoRA1.bib  expt.tex  iclr2022_conference.bbl  iclr2022_conference.sty
